@@ -1,3 +1,11 @@
+ukui-settings-daemon (3.1.0-1.1) v101; urgency=medium
+
+  * BUG号：无
+  * 需求号：无
+  * 其他改动说明：3.1增加对侧边栏声音Gsettings状态设置
+
+ -- sundagao <sundagao@kylinos.cn>  Fri, 24 Sep 2021 10:05:51 +0800
+
 ukui-settings-daemon (3.1.0-1) v101; urgency=medium
 
   * BUG号： 81183 【显示】控制面板-显示器，缩放屏幕无论选择125%,150%都不生效
